--- a/src/components/Index/Analys/Analys.css
+++ b/src/components/Index/Analys/Analys.css
@@ -145,13 +145,6 @@ button, input, optgroup, select, textarea {
     line-height: inherit;
 }
 
-.inputGroup[data-v-15011326] {
-    margin: 0 7px;
-    position: relative;
-    padding: 5px;
-    border-radius: 4px;
-}
-
 #InputNumber[data-v-15011326] {
     outline: none;
 }
@@ -863,3 +856,161 @@ a:not(.md-button) {
     }
 }
 
+.btnTransparent[data-v-2860c586] {
+    position: relative;
+    background-color: #02142b;
+    height: 38px;
+    line-height: 38px;
+}
+
+.mr-1, .mx-1 {
+    margin-right: 0.25rem!important;
+}
+.w-100 {
+    width: 100%!important;
+}
+
+@media (max-width: 1024.98px) {
+
+    .btnTransparent[data-v-2860c586] {
+        height: 40px;
+        line-height: 40px;
+    }
+}
+
+.inputGroup input[data-v-15011326] {
+    border-bottom: none;
+}
+
+.font-16[data-v-15011326] {
+    font-size: 16px;
+}
+
+@media (max-width: 1024.98px) {
+    #betAmount .inputAmount[data-v-15011326] {
+        padding: 8px 11px!important;
+    }
+}
+
+.btn[data-v-15011326] {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+}
+
+@media (max-width: 1024.98px) {
+    .groupButton.row[data-v-76861cc0] {
+        margin-left: -4px;
+        margin-right: -4px;
+    }
+}
+
+
+@media (max-width: 1024.98px) {
+    .groupButton.row [class*=col-][data-v-76861cc0] {
+        padding-left: 4px;
+        padding-right: 4px;
+    }
+}
+
+@media (max-width: 1024.98px) {
+    .btnTransparent[data-v-76861cc0] {
+        line-height: 40px;
+    }
+}
+
+.groupButton .btn[data-v-76861cc0] {
+    color: #fff;
+    height: 60px;
+}
+
+@media (max-width: 1024.98px) {
+    .groupButton .btn[data-v-76861cc0] {
+        height: 47px;
+    }
+}
+
+.button[data-v-76861cc0] {
+    cursor: pointer;
+    border: none;
+    background: none;
+    position: relative;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    font-weight: 700!important;
+    text-decoration: none;
+}
+
+.button[data-v-76861cc0]:disabled {
+    cursor: no-drop;
+}
+
+@media screen and (max-width: 1024px) {
+    #binaryPage .wrap[data-v-0dc9f329] {
+        height: 310px;
+        padding-top: 10px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #binaryPage .wrap[data-v-0dc9f329] {
+        height: 291px;
+    }
+}
+
+#binaryPage #analysis-wrapper[data-v-0dc9f329] {
+    height: calc(25vh - 16.25px);
+    position: relative;
+    padding-top: 28px;
+}
+
+@media screen and (max-width: 1024px) {
+    #binaryPage #analysis-wrapper[data-v-0dc9f329] {
+        min-height: 145px;
+        height: auto;
+    }
+}
+
+
+.wrap-gauge-meter[data-v-3162dcc5] {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+@media screen and (max-width: 1000px) and (orientation: landscape) {
+    .gauge-meter[data-v-3162dcc5] {
+        margin-top: 5px;
+        width: 350px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .tab-last-result.nav[data-v-0dc9f329] {
+        border-bottom: 1px solid #02142b;
+    }
+}
+
+.pb-1 {
+    padding-bottom: 0.25rem!important;
+}
+
+.align-items-center {
+    -webkit-box-align: center!important;
+    -ms-flex-align: center!important;
+    align-items: center!important;
+}
