--- a/src/components/Index/Chart/index.scss
+++ b/src/components/Index/Chart/index.scss
@@ -237,6 +237,9 @@
     margin-top: 10px;
     width: 320px;
   }
+  .boxContent {
+    margin-top: 0rem !important;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -631,7 +634,7 @@
 .gauge-meter-status-list {
   position: absolute;
   width: 100%;
-  bottom: -60px;
+  bottom: -42px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -1424,9 +1427,9 @@
 }
 
 @media only screen and (min-width: 428px) and (max-width: 926px) {
-  .wrap-gauge-meter {
-    top: 60px !important;
-  }
+  // .wrap-gauge-meter {
+  //   top: 60px !important;
+  // }
 
   .lg\:relative.mt-4.text-center.color_white.cbtl {
     display: none;
@@ -1438,9 +1441,9 @@
 }
 
 @media only screen and (min-device-width: 391px) and (max-device-width: 844px) {
-  .wrap-gauge-meter {
-    top: 60px !important;
-  }
+  // .wrap-gauge-meter {
+  //   top: 60px !important;
+  // }
 
   .lg\:relative.mt-4.text-center.color_white.cbtl {
     display: none;
@@ -1465,7 +1468,11 @@
   }
 
   .ct.flex.justify-center {
-    margin-top: -10px !important;
+    margin-top: 0px !important;
+  }
+
+  #analysis-wrapper {
+    height: 120px !important
   }
 }
 
@@ -1621,10 +1628,10 @@ image {
 }
 
 @media only screen and (min-device-width: 800px) {
-  .mobile {
-    margin-top: 0px;
-    left: -154px;
-  }
+  // .mobile {
+  //   margin-top: 0px;
+  //   left: -154px;
+  // }
 }
 
 @media (max-width: 768px) {
