--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden 
 }
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
+@font-face {
+  font-family: 'Frizon';
+  src: url('./assets/font/Frizon.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -25,7 +34,12 @@ code {
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body::-webkit-scrollbar {
+  height: 100%;
   width: 0px;
   background: transparent;
 }
